# dodo-whole-body-balance

./: CMakeLists.txt  README.md
eigen/: eigenUtils.cpp
include/: eigenUtils.h
libraries/: mjkey.txt
model/: creature.xml  half-cheetah.xml
sample/: balancerWrench.cpp  balancerWrench.cpp.autosave  basic.cpp
